[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[features]
default = ["rustls", "openssl"]
rustls = ["dep:rustls", "rustls-pemfile"]
openssl = ["dep:openssl"]

[dependencies]
s2n-tls = { path = "../s2n-tls" }
rustls = { version = "0.21", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
openssl = { version = "0.10", optional = true }
errno = "0.3"
libc = "0.2"
crabgrind = "0.1"
rand = "0.8"
rand_distr = "0.4"
plotters = "0.3"
serde_json = "1.0"
semver = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "handshake"
harness = false

[[bench]]
name = "throughput"
harness = false
