[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[features]
historical-perf = []

[dependencies]
s2n-tls = { path = "../s2n-tls" }
rustls = "0.21"
rustls-pemfile = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
errno = "0.3"
libc = "0.2"
crabgrind = "0.1"
rand = "0.8"
rand_distr = "0.4"
plotters = "0.3"
serde_json = "1.0"
semver = "1.0"
strum = { version = "0.25", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
pprof = { version = "0.12", features = ["criterion", "flamegraph"] }

[[bench]]
name = "handshake"
harness = false

[[bench]]
name = "throughput"
harness = false
