[package]
name = "generate"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
license = "Apache-2.0"
# this is an internal tool for generating bindings
publish = false

[dependencies]
bindgen = "0.65"
glob = "0.3"
regex = "=1.9.6" # newer versions require rust 1.65, see https://github.com/aws/s2n-tls/issues/4242
