[package]
name = "integration"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
publish = false

[features]
# Network tests are useful but relatively slow and inherently flaky. So they are
# behind this feature flag.
network-tests = []

[dependencies]
s2n-tls = { path = "../s2n-tls"}
s2n-tls-hyper = { path = "../s2n-tls-hyper" }
s2n-tls-tokio = { path = "../s2n-tls-tokio" }
s2n-tls-sys = { path = "../s2n-tls-sys" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util"] }

tracing = "0.1"
tracing-subscriber = "0.3"
test-log = { version = "0.2", features = ["log", "trace"]}

http = "1.1"
http-body-util = "0.1"
bytes = "1.8"
hyper-util = "0.1"
