[package]
name = "s2n-tls"
description = "A C99 implementation of the TLS/SSL protocols"
version = "0.0.27"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.63.0"
repository = "https://github.com/aws/s2n-tls"
license = "Apache-2.0"

[features]
default = []
quic = ["s2n-tls-sys/quic"]
pq = ["s2n-tls-sys/pq"]
testing = ["bytes"]

[dependencies]
bytes = { version = "1", optional = true }
errno = { version = "0.3" }
libc = "0.2"
s2n-tls-sys = { version = "=0.0.27", path = "../s2n-tls-sys", features = ["internal"] }
pin-project-lite = "0.2"

[dev-dependencies]
bytes = { version = "1" }
futures-test = "0.3"
openssl = { version = "0.10" }
