[workspace]
members = [
    "benchmarks",
    "integration", "s2n-metrics-subscriber",
    "s2n-tls-hyper",
    "s2n-tls-sys-internal",
    "tls-harness",
]

# brass-aphid-wire has a dependency on s2n-tls. This patch is necessary to unify
# the crates.io dependency that brass-aphid-wire declares with the path-based 
# dependency that the integration tests have
[patch.crates-io]
s2n-tls-sys = { path = "../extended/s2n-tls-sys" }
s2n-tls = { path = "../extended/s2n-tls" }
