[package]
name = "tls-shim-interop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = [ "io-std", "io-util", "macros", "net", "rt-multi-thread", "test-util", "time"] }
clap = { version = "3", features = ["derive"] }
common = {path = "../common" }
tracing = "0.1"
tracing-subscriber = "0.3"
turmoil = "0.6"
libc = "0.2"

# The "unstable-ktls" feature is enabled to provide access to the key update counters
s2n-tls = {path = "../../../bindings/rust/s2n-tls", features = ["unstable-ktls"] }
s2n-tls-tokio = {path = "../../../bindings/rust/s2n-tls-tokio" }
