[package]
name = "aws-kms-tls-auth-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
aws-kms-tls-auth = {path = ".."}

[[bin]]
name = "client_hello"
path = "fuzz_targets/client_hello.rs"
test = false
doc = false
bench = false

[[bin]]
name = "psk_client_hello"
path = "fuzz_targets/psk_client_hello.rs"
test = false
doc = false
bench = false
